# casper

./: .gitignore  Product Proposal.key
Casper/: Debug+CoreDataClass.swift  Debug+CoreDataProperties.swift  Metadata+CoreDataClass.swift  Metadata+CoreDataProperties.swift  UserAttributes+CoreDataClass.swift  UserAttributes+CoreDataProperties.swift
Casper/Casper/: AssetLibraryUtils.swift  CasperApp.swift  ContentView.swift  FriendsView.swift  Info.plist  KillView.swift  MainTabsView.swift  Persistence.swift  PersistenceManager.swift  ProcessingQueueView.swift  QueueProcessors.swift  SessionCreationView.swift  SessionView.swift  SettingsView.swift  Statistics+CoreDataClass.swift  Statistics+CoreDataProperties.swift  UserData.swift
Casper/Casper.xcodeproj/: project.pbxproj
Casper/Casper.xcodeproj/project.xcworkspace/xcuserdata/ershov.xcuserdatad/: UserInterfaceState.xcuserstate
Casper/Casper/Casper.xcdatamodeld/Casper.xcdatamodel/: contents
Casper/CasperTests/: CasperTests.swift
Casper/CasperUITests/: CasperUITests.swift  CasperUITestsLaunchTests.swift
ios/Casper/: AssetLibraryUtils.swift  CasperApp.swift  EchoedImageView.swift  Errors.swift  MainTabsView.swift  ManagementView.swift  QueueProcessors.swift  SessionCreationView.swift  SessionView.swift  SettingsView.swift  UserData.swift  WebSocketManager.swift
ios/Casper.xcodeproj/: project.pbxproj
ios/Casper/Casper.xcdatamodeld/: .xccurrentversion
server/: README.md  pyproject.toml
server/server/: image_data_manager.py  main.py
server/server/ssl/: README.md  cert.pem  private.key
(+4 files in other folders)
