[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pylint = "^3.1.0"
flask-socketio = "^5.4.1"
image = "^1.5.33"
pillow = "^11.0.0"
gevent = "^24.11.1"
gevent-websocket = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
